@@ -15,11 +15,10 @@ from functools import reduce
 from pyscf.lib import logger
 from pyscf.cc import ccsd
 from pyscf.cc import _ccsd
-from pyscf.cc import ccsd_grad
 from pyscf.cc import uccsd_rdm
 from pyscf.scf import ucphf
 from pyscf.scf import rhf_grad
-from pyscf.grad import uhf as uhf_grad
+from pyscf.grad import ccsd as ccsd_grad
 
 
 #
