@@ -29,6 +29,9 @@ PySCF 1.5 alpha (2018-03-??)
   - GIAO-ECP integrals for NMR shielding
   - Interface to pyWannier90
   - Restricted MP2 with k-point sampling
+  - RCCSD(T), UCCSD(T) and GCCSD(T) density matrices
+  - RCCSD(T), UCCSD(T) analytical nuclear gradients
+  - MCSCF nuclear gradients
 * Improved
   - Support of setting omp threads in FCI solver
   - Supported even number of grids in pbc calculations
@@ -38,6 +41,7 @@ PySCF 1.5 alpha (2018-03-??)
   - The mcscf natural orbitals in the state-average calculation
   - Performance of ECP integrals
   - Prescreening for PBC 3-center integrals
+  - G0W0
 
 
 PySCF 1.4.3 (2018-01-17)
